Push tanggal 27 april
Register, Login Multi user, Level User , CRUD Retail

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,8 @@ a:focus, a:active {
   -moz-transition: all 300ms ease 0s;
   -webkit-transition: all 300ms ease 0s;
   -o-transition: all 300ms ease 0s;
-  -ms-transition: all 300ms ease 0s; }
+  -ms-transition: all 300ms ease 0s; 
+}
 
 input, select, textarea {
   outline: none;
@@ -286,9 +287,32 @@ figure {
   -ms-border-radius: 5px;
   margin-top: 25px;
   cursor: pointer; }
+
   .form-submit:hover {
     background: #4292dc; }
 
+    .formregister-submit {
+      display: inline-block;
+      background: #449d44;
+      color: #fff;
+      border-bottom: none;
+      width: auto;
+      height: auto;
+      padding: 15px 39px;
+      border-radius: 5px;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -o-border-radius: 5px;
+      -ms-border-radius: 5px;
+      margin-top: 25px;
+      cursor: pointer; }
+    
+      .formregister-submit:hover {
+        background: #449d44; }
+
+    a {
+      text-decoration: none;
+    }
 #signin {
   margin-top: 16px; }
 
